--- a/frontend/src/styles/SimpleForm.css
+++ b/frontend/src/styles/SimpleForm.css
@@ -1,4 +1,5 @@
 .form-area{
+    background: linear-gradient(30deg, #000000, darkgray, #000000);
     padding: 2rem;
     display: flex;
     flex-direction: column;
