--- a/frontend/src/styles/Response.css
+++ b/frontend/src/styles/Response.css
@@ -1,14 +1,22 @@
- .form-area ul {
+ .response-form-area{
+    max-height: 50vh;
+    overflow-y: scroll;
+    padding: 2rem;
+    box-shadow: 0 0 5px 5px black;
+    border-radius: .5rem;
+ }
+
+ .response-form-area ul {
     list-style-type: none;
     padding: 0;
   }
   
-  .form-area li {
+  .response-form-area li {
     padding: 10px;
     border-bottom: 1px solid #ddd;
   }
   
-  .form-area .error {
+  .response-form-area .error {
     color: red;
   }
   
