--- a/frontend/src/styles/SimpleForm.css
+++ b/frontend/src/styles/SimpleForm.css
@@ -3,8 +3,54 @@
     padding: 2rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
     border: 2px solid silver;
     border-radius: .5rem;
     box-shadow: 0 0 5px 5px black;
+}
+
+.application-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.date-input{
+    cursor: pointer;
+    font-size: 1.5rem;
+    padding: .5rem;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
+.date-input:focus{
+    outline: none;
+}
+
+.application-form label{
+    width: 100%;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.text-input{
+    max-width: 200px;
+    font-size: 1.2rem;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 0 2px 2px #fff;
+    margin-left: 10px;
+    padding: 5px;
+}
+
+.text-input:focus{
+    outline: none;
+}
+
+.result-area{
+    font-size: 1rem;
 }
